# gait-decoding

./: .gitignore  explore.ipynb  self_supervised_autoencoder.ipynb  self_supervised_model_gait_decoding.ipynb
CNNLSTM/: best_model.pth  notebook.ipynb
CNNLSTM/scripts/session_processing/: preprocessing.py
LSTM/: .gitignore  pixi.toml
LSTM/notebooks/: EEG_Gait_Decoding_CNN.ipynb  Resnet.ipynb  best_model.pth  explore.ipynb  train.ipynb
LSTM/notebooks/scripts/: train.py
LSTM/notebooks/scripts/session_processing/: preprocessing.py  sessions.py  signal_transforms.py  windowing.py
LSTM/scripts/: train.py
LSTM/scripts/session_processing/: __init__.py  sessions.py  windowing.py
data-reencoding/: README.md  main.py  pyproject.toml
self-supervised-autoencoder/: self_supervised_model_gait_decoding.ipynb
